--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                 </li>
 
                 <li id="projet2">
-                    <a href="https://wissalss.github.io/wildCodeSchool/" target="_blank">
-                        <img class="pr" src="photos/projet5.jpg" alt="wild">
+                    <a href="https://wissalss.github.io/WISSALSENUSSI_3_26102020/" target="_blank">
+                        <img class="pr" src="photos/p3.PNG" alt="">
                     </a>
                 </li>
             </ul>
@@ -56,8 +56,8 @@
         <div>
             <ul>
                 <li id="projet3">
-                    <a c href="https://wissalprojet3.000webhostapp.com/" target="_blank">
-                        <img class="pr" src="photos/projet3.PNG" alt="jeu de dé">
+                    <a c href="https://wissalss.github.io/WISSALSENUSSI_2_23092020/" target="_blank">
+                        <img class="pr" src="photos/p2.PNG" alt="">
                     </a>
                 </li>
 
