--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <section id="about" class="container-fluid">
         <div class="col-xs-8 col-md-4 profile-picture">
-            <img src="photos/img cv.jpg" alt="wissal" class="img-circle">
+            <img src="photos/meimg.png" alt="wissal" class="img-circle">
         </div>
         <div class="heading">
             <h1> WISSAL SENUSSI</h1>
@@ -31,8 +31,8 @@
     <section id="propo">
         <div>
             <h2> A propos de moi</h2>
-            <p> Bienvenue dans mon portfolio <br> Je suis wissal. Développeuse web junior. <br> Titulaire d'un RNCP niveau 5 (Bac+2). Je viens de terminer une formation de développement web avec OpenClassRooms. Durant la formation j’ai réaliser des projet
-                sur la création des maquettes web en utilisant les langage HTML, CSS et quelques projets avec JavaScript, Node.js, Express.js et MySQL. Actuellement en recherche d'emploi en tant que développeuse web full stack.</p>
+            <p> Bienvenue dans mon portfolio. Je suis wissal. Développeuse web junior. <br> Titulaire d'un RNCP niveau 5 (Bac+2). Je viens de terminer une formation de développement web avec OpenClassRooms. Durant la formation j’ai réalisé des projet sur
+                la création des maquettes web en utilisant les langage HTML, CSS et quelques projets avec JavaScript, Node.js, Express.js et MySQL. <br> Je suis actuellement en recherche d'emploi en tant que développeuse web full stack.</p>
         </div>
     </section>
 
